--- a/css/index.css
+++ b/css/index.css
@@ -1,9 +1,17 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+
 * {
 	color: inherit;
 	font-family: inherit;
 }
 
 body {
+	color: #222;
+	font-family: "Poppins", "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+}
+
+header,
+footer {
 	font-family: Georgia, "Times New Roman", Times, serif;
 }
 .wrapper {
